# lebot

./: .example.env  .gitignore  README.md  agent.py  bot.py  environment.yml  local_env.yml  prompts.py  pyproject.toml  test_bot.py
cloudbot/: README.md  agent.py  bot.py  main.py  prompts.py
cloudbot/tools/: aws.py  session.py
helpers/: prompts.py
old/experimentation/: main.py
old/nba-bot/: agent.py  test_bot.py
old/nba-bot/tools/: nba.py
old/start-code/: agent.py  bot.py
tools/: aws.py  github.py  github_ugly_code.py  session.py
wrapped/: agent.py  bot.py  local_env.yml
wrapped/tools/: web_search.py
